--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -222,7 +222,6 @@ nav.navbar {
     height: 100%;
     flex-direction: column;
     // background-color: $background;
-    margin: 0 75px 60px 75px;
 
     .row {
         width: 100%;
